# kiss-sync

./: .devcontainer.json  .gitignore  Dockerfile  README.md  build.py  devcontainer-packages.txt  nohup.out  pyproject.toml
kiss_sync/: __main__.py  webview.py
kiss_sync/gui/: .gitignore  index.html  package-lock.json  package.json  server.py  tsconfig.json  vite.config.ts
kiss_sync/gui/@kiss-sync/: main.ts
kiss_sync/gui/@kiss-sync/components/: Application.vue
